feat: move to api v13 and add fb_login_id
