# pkg/facebookgen/api/swagger.yaml
@@ -12,7 +12,7 @@ info:
   contact:
     email: "web_signals_integrations@fb.com"
 host: "graph.facebook.com"
-basePath: "/v8.0"
+basePath: "/v13.0"
 tags:
 - name: "Conversions API (for Web)"
   description: "The Conversions API (for web) allows advertisers to send web events\
@@ -335,6 +335,11 @@ definitions:
         example: "anid1234"
         description: "The subscription ID for the user in this transaction. This is\
           \ similar to the order ID for an individual product."
+      fb_login_id:
+        type: "integer"
+        format: "int64"
+        description: "Do not hash. The ID issued by Facebook when a person first logs\
+          \ into an instance of an app. This is also known as App-Scoped ID."
     description: "user_data is a set of identifiers Facebook can use for targeted\
       \ attribution. You must provide at least one of the following user_data keys\
       \ in your request"
